# financial-data-mcp

./: .gitignore  README.md  mcp_config.json  pyproject.toml  requirements.txt  server.py
fetchers/: bse.py  news.py  nse.py  screener.py  tickertape.py  web_search.py
utils/: calculator.py  cross_check.py
